[project]
name = "bpost-address-validator"
version = "0.1.0"
description = "Python wrapper for bpost External Mailing Address Proofing API with pydantic models and httpx sync/async clients."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
